variadics/tests/compile-fail/var_expr_missing_comma.rs
use variadics::*;

fn main() {
    let _ = var_expr!(1, 2.0 "three", false);
}