variadics/tests/compile-fail/var_expr_missing_comma.stderr
error: no rules expected the token `"three"`
 --> tests/compile-fail/var_expr_missing_comma.rs:4:30
  |
4 |     let _ = var_expr!(1, 2.0 "three", false);
  |                             -^^^^^^^ no rules expected this token in macro call
  |                             |
  |                             help: missing comma here
  |
  = note: while trying to match sequence start
